bug filxes and payment-result on small screens

--- a/src/less/components/paymentResult.less
+++ b/src/less/components/paymentResult.less
@@ -64,7 +64,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             md-tabs:not(.md-no-tab-content):not(.md-dynamic-height) {
-                min-height: 16.5em;
+                min-height: 15em;
             }
             div {
                 flex-basis: 50%;
